--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -16,7 +16,7 @@
   margin: 0;
   padding: 0;
   color: #2d2d2d;
-  background-color: #faf9f6;
+  background-color: #fffff5;
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
@@ -26,7 +26,6 @@
   flex-direction: row;
   height: auto; /* Let it adjust dynamically */
   width: 100%;
-  background-color: #faf9f6;
   justify-content: center;
   align-items: center;
   gap: 35px; /* Better spacing */
