Footer & Path update
Added links to the social media images

fix paths

--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -83,7 +83,7 @@
 <body>
   <div id="header"></div>
   <div class="bio">
-      <img class="pfp" src="/assets-and-images/Elder Kev Picture.jpg">
+      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
     <div class="p-bio">
       <h6 class="title">Pastor</h6>
       <h2 class="name">Elder Kevin Gayle</h2>
@@ -93,7 +93,7 @@
   </div>
   <div class="bio">
     <div>
-      <img class="pfp" src="/assets-and-images/Elder Kev Picture.jpg">
+      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
     </div>
     <div class="p-bio">
       <h6 class="title">Pastor</h6>
@@ -104,7 +104,7 @@
   </div>
   <div class="bio">
     <div>
-      <img class="pfp" src="/assets-and-images/Elder Kev Picture.jpg">
+      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
     </div>
     <div class="p-bio">
       <h6 class="title">Pastor</h6>
