--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -128,3 +128,6 @@
         loadComponent("header", "../components/header.html"); // Load header
         loadComponent("footer", "../components/footer.html"); // Load footer
       }
+  </script>
+</body>
+</html>
