--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -83,10 +83,10 @@
 <body>
   <div id="header"></div>
   <div class="bio">
-      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
+      <img class="pfp" src="../assets-and-images/Bishop Picture.jpg">
     <div class="p-bio">
-      <h6 class="title">Pastor</h6>
-      <h2 class="name">Elder Kevin Gayle</h2>
+      <h6 class="title">Presiding Bishop</h6>
+      <h2 class="name">Kingsford Bloomfield</h2>
       <p class="bio-info">Elder Kevin Gayle, a third-generation Apostolic preacher, was born in Manchester, Jamaica, WI and migrated with his family to Brooklyn, NY at the age of four. He spent 17 years under the leadership of the late, Apostle and Founder of the Gospel Tabernacle Church, Bishop Samuel Green II. During this time he accepted the Lord as his personal savior and was carefully nurtured in the gospel by his Pastor and the church family.</p>
         <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
     </div>
