--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -35,13 +35,14 @@
 .pfp {
   max-width: 450px;
   height: auto;
-  border-radius: 16px;
+  border-radius: 7%;
+  padding: 20px;
 }
 .p-bio {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 550px;
+  max-width: 620px;
   min-width: 450px;
 }
 .title {
@@ -68,14 +69,17 @@
     .bio {
       flex-direction: column;
       text-align: center;
-      gap: 20px; /* Adjust spacing when stacked */
+      gap: 10px; /* Adjust spacing when stacked */
+      padding: 30px;
     }
     .pfp {
-      max-width: 78%; /* Resize for mobile */
+      max-width: 85%; /* Resize for mobile */
+      padding: 0;
     }
     .p-bio {
       width: auto;
       max-width: 400px;
+      min-width: 300px;
     }
   }
   </style>
@@ -87,8 +91,15 @@
     <div class="p-bio">
       <h6 class="title">Presiding Bishop</h6>
       <h2 class="name">Kingsford Bloomfield</h2>
-      <p class="bio-info">Elder Kevin Gayle, a third-generation Apostolic preacher, was born in Manchester, Jamaica, WI and migrated with his family to Brooklyn, NY at the age of four. He spent 17 years under the leadership of the late, Apostle and Founder of the Gospel Tabernacle Church, Bishop Samuel Green II. During this time he accepted the Lord as his personal savior and was carefully nurtured in the gospel by his Pastor and the church family.</p>
-        <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
+      <p class="bio-info">
+          Bishop Kingsford A. Bloomfield born in Passage  Fort, St.Catherine Jamaica, accepted the Lord at the tender age of nine and a half after attending The Rehoboth Apostolic Church one night after his friends did the same. 
+      </p>
+      <p class="bio-info"
+      >Bishop Bloomfield served in multiple capacities in our ministry over the years. He faithfully served under our late founderApostle Bishop Samuel Green II at the Headquarters church as an Elder, Musician, and Bible Teacher, among various other duties. In 1997 he served in the office of Pastor for the GTC Franklin Avenue branch for seven years before returning to Snyder Avenue in 2004 and was installed as Pastor and later Overseer of our Church Organization in 2006. 
+      </p>
+      <p class="bio-info">
+        He truly believes that as the body of Christ we should be united, as we can accomplish anything once we come together as one.
+      </p>
     </div>
   </div>
   <div class="bio">
@@ -102,17 +113,7 @@
         <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
     </div>
   </div>
-  <div class="bio">
-    <div>
-      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
-    </div>
-    <div class="p-bio">
-      <h6 class="title">Pastor</h6>
-      <h2 class="name">Elder Kevin Gayle</h2>
-      <p class="bio-info">Elder Kevin Gayle, a third-generation Apostolic preacher, was born in Manchester, Jamaica, WI and migrated with his family to Brooklyn, NY at the age of four. He spent 17 years under the leadership of the late, Apostle and Founder of the Gospel Tabernacle Church, Bishop Samuel Green II. During this time he accepted the Lord as his personal savior and was carefully nurtured in the gospel by his Pastor and the church family.</p>
-        <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
-    </div>
-  </div>
+ 
   <div id="footer"></div>
   <script>
     function loadComponent(elementId, filePath) {
