Change log Performance
1. To increase performance, I changed many of the images from PDF, JPEG to more website-friendly formats and gave them proper sizing.

1a. These images are given smaller sizes so they don't take nearly as long to load

--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -9,80 +9,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../styles/biio.css">
   <title>Bio test</title>
-  <style>
-    body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #2d2d2d;
-  background-color: #fffff5;
-  height: 100vh;
-
-  box-sizing: border-box;
-}
-.bio {
-  display: flex;
-  flex-direction: row;
-  height: auto; /* Let it adjust dynamically */
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  gap: 35px; /* Better spacing */
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.pfp {
-  max-width: 450px;
-  height: auto;
-  border-radius: 7%;
-  padding: 20px;
-}
-.p-bio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 620px;
-  min-width: 450px;
-}
-.title {
-  font-family: quicksand;
-  color: #f1c404;
-  font-weight: 900;
-  font-size: 1.75rem;
-  letter-spacing: 2px;
-  margin-bottom: 5px;
-  margin-top: 10px;
-}
-.name {
-  font-family: quicksand;
-  font-weight: 1000;
-  font-size: 48px;
-  letter-spacing: 2px;
-  margin: 0 0 15px 0;
-}
-.bio-info {
-  line-height: 1.6;
-  font-family: poppins;
-}
-  @media (max-width: 768px) {
-    .bio {
-      flex-direction: column;
-      text-align: center;
-      gap: 10px; /* Adjust spacing when stacked */
-      padding: 30px;
-    }
-    .pfp {
-      max-width: 85%; /* Resize for mobile */
-      padding: 0;
-    }
-    .p-bio {
-      width: auto;
-      max-width: 400px;
-      min-width: 300px;
-    }
-  }
-  </style>
 </head>
 <body>
   <div id="header"></div>
@@ -91,26 +19,30 @@
     <div class="p-bio">
       <h6 class="title">Presiding Bishop</h6>
       <h2 class="name">Kingsford Bloomfield</h2>
-      <p class="bio-info">
-          Bishop Kingsford A. Bloomfield born in Passage  Fort, St.Catherine Jamaica, accepted the Lord at the tender age of nine and a half after attending The Rehoboth Apostolic Church one night after his friends did the same. 
+      <div>
+          <p class="bio-info">
+            Bishop Kingsford A. Bloomfield, born in Passage Fort, St. Catherine, Jamaica, accepted the Lord at the tender age of nine and a half while attending The Rehoboth Apostolic Church. After witnessing his friend’s decision to accept Christ, he too was moved and chose to follow the same path that very night.
+          </p>
+          <p class="bio-info"
+          >Bishop Bloomfield served in multiple capacities in our ministry over the years. He faithfully served under our late founderApostle Bishop Samuel Green II at the Headquarters church as an Elder, Musician, and Bible Teacher, among various other duties. In 1997 he served in the office of Pastor for the GTC Franklin Avenue branch for seven years before returning to Snyder Avenue in 2004 and was installed as Pastor and later Overseer of our Church Organization in 2006. 
+          </p>
+          <p class="bio-info">
+            His wife Mother Janette Bloomfield a powerful and committed woman of God is his biggest supporter who is constant prayer and intercession on his behalf. They together were blessed by the Lord with three children, Kijan, Kajette, and Kingsford II.He truly believes that as the body of Christ we should be united, as we can accomplish anything once we come together as one.
       </p>
-      <p class="bio-info"
-      >Bishop Bloomfield served in multiple capacities in our ministry over the years. He faithfully served under our late founderApostle Bishop Samuel Green II at the Headquarters church as an Elder, Musician, and Bible Teacher, among various other duties. In 1997 he served in the office of Pastor for the GTC Franklin Avenue branch for seven years before returning to Snyder Avenue in 2004 and was installed as Pastor and later Overseer of our Church Organization in 2006. 
-      </p>
-      <p class="bio-info">
-        He truly believes that as the body of Christ we should be united, as we can accomplish anything once we come together as one.
-      </p>
+      </div>
     </div>
   </div>
   <div class="bio">
     <div>
-      <img class="pfp" src="../assets-and-images/Elder Kev Picture.jpg">
+      <img class="pfp" src="../assets-and-images/images/Elder-Kev-pic.webp">
     </div>
     <div class="p-bio">
       <h6 class="title">Pastor</h6>
       <h2 class="name">Elder Kevin Gayle</h2>
+      <div>
       <p class="bio-info">Elder Kevin Gayle, a third-generation Apostolic preacher, was born in Manchester, Jamaica, WI and migrated with his family to Brooklyn, NY at the age of four. He spent 17 years under the leadership of the late, Apostle and Founder of the Gospel Tabernacle Church, Bishop Samuel Green II. During this time he accepted the Lord as his personal savior and was carefully nurtured in the gospel by his Pastor and the church family.</p>
         <p class="bio-info">He currently serves as the Pastor of this ministry under the leadership of the current Presiding Bishop, Bishop Kingsford A. Bloomfield Sr.. Elder Gayle has served in various capacities in the ministry over the years. In particular, he has an intense desire to see youth enthused and fully engaged in the work of the Lord. This passion to see young people succeed has spilled over into his professional life, as he is employed as an Academic Counselor at the Kingsborough Community College. Elder Gayle holds a Bachelor's Degree in Health Science, a Master's Degree in Social Work, and a Master's Degree in Ministry. He is married to the one he calls, his "rib", Evangelist Sherlene Gayle; a powerful intercessor who stands by him all the way. God has blessed them with four wonderful children; Sarah, Khloe, Simon, and Nathan. He desires to do ALL that God has commissioned him to do and live that his life will bring glory to God in all things.</p>
+      </div>
     </div>
   </div>
  
