--- a/Website/testing/test-bio.html
+++ b/Website/testing/test-bio.html
@@ -55,7 +55,7 @@
 
   <div class="bio">
     <div>
-      <img class="pfp" src="../assets-and-images/images/Elder-Watson.jpeg">
+      <img class="pfp" src="../assets-and-images/images/Elder-Watson.webp">
     </div>
     <div class="p-bio">
       <h6 class="title">Elder</h6>
